services: brands: Add brid sequential field
